infra/openshift/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: image-registry.openshift-image-registry.svc:5000/shabinshareefa5018-dev/backend@sha256:a2cbec9182806df24a9f941a51dd351e23d4241ca7589c245cfdc63802886966
          ports:
            - containerPort: 80
