infra/openshift/backend-ksvc.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: backend
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/minScale: "1"
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/shabinshareefa5018-dev/backend:latest
          ports:
            - containerPort: 5000
